Updated CV publication list

--- a/cv/malick-cv.tex
+++ b/cv/malick-cv.tex
@@ -19,6 +19,9 @@
 \titleformat*{\section}{\huge\bfseries}
 \titleformat*{\subsection}{\LARGE\bfseries}
 
+% Needed to fix \tightlist definition in used in pandoc
+\providecommand{\tightlist}{ }
+
 % header and footer
 \usepackage{fancyhdr}
 \setlength{\headheight}{15.2pt}
