Add 'School of' to latex header in CV

--- a/cv/malick-cv.tex
+++ b/cv/malick-cv.tex
@@ -75,7 +75,7 @@
   \vspace*{0.25cm}
 
     Ph.D. Candidate, Simon Fraser University \\
-    Resource and Environmental Management \\
+    School of Resource and Environmental Management \\
     Burnaby, BC, Canada \\
     mmalick@sfu.ca \\
   
