Update header info in PDF of CV

--- a/malick-cv.tex
+++ b/malick-cv.tex
@@ -60,10 +60,9 @@
   {\huge \textbf{Michael J. Malick}}
   \vspace*{0.25cm}
 
-  Ph.D. Candidate, Simon Fraser University \\
-  School of Resource and Environmental Management \\
-  Burnaby, BC, Canada \\
-  mmalick@sfu.ca \\
+  Northwest Fisheries Science Center, NOAA Fisheries \\
+  2725 Montlake Boulevard East, Seattle, WA 98112 \\
+  michael.malick@noaa.gov \\
 
 \end{center}
 
