Add plain text version of CV

--- a/malick-cv.tex
+++ b/malick-cv.tex
@@ -59,17 +59,7 @@
 \begin{document}
 \thispagestyle{firststyle}
 
-{\LARGE \textbf{Michael J. Malick}}
-\vspace*{0.25cm}
-
-
-Northwest Fisheries Science Center, NOAA Fisheries \\
-2725 Montlake Boulevard East\\
-Seattle, WA 98112 \\
-michael.malick@noaa.gov
-
-
-\vspace*{0.25cm}
+\vspace{-5cm}
 \input{cv-body.tex}
 
 \end{document}
